--- a/test-admin/addingtable.ui
+++ b/test-admin/addingtable.ui
@@ -30,7 +30,11 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLineEdit" name="nameOfTable"/>
+      <widget class="QLineEdit" name="nameOfTable">
+       <property name="styleSheet">
+        <string notr="true">font: 75 12pt &quot;Unispace&quot;;</string>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="verticalSpacer">
